finish the photo grid

--- a/style.css
+++ b/style.css
@@ -35,7 +35,25 @@ a.active {
   margin: 32px;
 }
 
-img {
-  width: 40%;
+.gallery {
+  padding: 16px;
+}
+
+.card {
+  width: 49.75%;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 16px;
+}
+
+.card img {
   height: 500px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card h2 {
+  display: inline-block;
+  margin: 8px 0 16px 0;
+  font-weight: 300;
 }
